fixed navigation wrapping issue

--- a/myPortfolio/style.css
+++ b/myPortfolio/style.css
@@ -6,11 +6,14 @@ body {
     width: 100vw;
     height: 100vh;
   }
-  /* What kind of selector is this? ANSWER: a class selector */
+  /* What kind of selector is this? ANSWER: a class selector! */
   .logo {
     width: 150px;
     height: 150px;
     margin: 3% 3%;
+    border-radius: 100%;
+    background-color: white;
+    /*box-shadow: 1px 1px 6pt 6pt white;*/
   }
 
   header {
@@ -39,6 +42,8 @@ body {
     padding: 20px;
     text-align: center;
     border: 3px solid white;
+    text-decoration: none;
+    white-space: nowrap;
   }
 
   nav > a:hover {
@@ -47,23 +52,22 @@ body {
   }
 
   .has-border {
-    border-radius: 25px;
+    border-radius: 25pt;
     border: 3px solid #0795C3;
     background: white;
     padding: 12px;
-    /*add auto to padding? %?*/
   }
 
   nav {
     display: flex;
-    justify-content: flex-end;
     width: 100%;
     padding-right: 2%;
+    justify-content: flex-end;
   }
   /* This is an ID selector */
   #profile-pic {
-    width: 200px;
-    height: 300px;
+    width: 200pt;
+    height: 300pt;
     border-radius: 50%;
     margin: 1% auto;
     grid-column: 2/3;
